--- a/templates/back_office/admin_articles.html.twig
+++ b/templates/back_office/admin_articles.html.twig
@@ -19,43 +19,88 @@
         <thead>
             <tr class="entete-articles">
                 {% for data in colonnes %}
-
-                    {% if data != 'id' %}
-
-                        <th class="text-center"> {{data|capitalize}} </th>
-
+                    {% if data != 'photo' %}
+                        {% if data != 'photo2' %}
+                            {% if data != 'photo3' %}
+                                {% if data != 'photo4' %}
+                                    {% if data != 'photo5' %}
+                                        {% if data != 'photo6' %}
+                                            <th class="text-center"> {{data|capitalize}} </th>
+                                        {% endif %}
+                                    {% endif %}
+                                {% endif %}
+                            {% endif %}
+                        {% endif %}
                     {% endif %}
-                    
                 {% endfor %}
                 <th class="text-center">Taille | Stock</th>
                 <th class="text-center">Catégorie</th>
+                <th class="text-center">Photo 1</th>
+                <th class="text-center">Photo 2</th>
+                <th class="text-center">Photo 3</th>
+                <th class="text-center">Photo 4</th>
+                <th class="text-center">Photo 5</th>
+                <th class="text-center">Photo 6</th>
+
+                
                 <th class="text-center">Action</th>
             </tr>
         </thead>
 
         <tbody>        
             {% for data in cellules %} 
-                {% if data != 'id' %}
+                {# {% if data != 'id' %} #}
                 <tr>
+                    <td>{{ data.id}}</td>
                     <td> <a  href="" class="link-secondary">{{ data.titre|slice(0, 20)|striptags }} </a></td>
                     <td> {{ data.description|slice(0, 50)|striptags }}[...] </td> 
-                    {% if data.photo != null %}
-                        <td class="text-center"><img src="{{ asset('uploads/photos/' ~ data.photo) }}" alt="" style="width: 100px; height: 100px;"></td>
-                    {% else %}
-                        <td class="text-danger text-center">Aucune photo téléchargée</td>
-                    {% endif %}                    <td class="text-center"> {{ data.prix }}&nbsp;€</td>
-                    
+                                       
+                    <td class="text-center"> {{ data.prix }}&nbsp;€</td>
                     <td class="text-center"> {{ data.couleur }}</td>
-
                     <td class="text-center">
                         {% for tail in toutTail %}
                             {% if data.id == tail.article.id %}
-                                {{tail.titre}} | {{tail.stock}}<br>
+                                {{tail.titre}}&nbsp;|&nbsp;{{tail.stock}}<br>
                             {% endif %}
                         {% endfor %} 
                     </td>
-
                     <td class="text-center">{{data.category.titre}} / {{data.category.grdCat}} / {{data.category.sexe}}</td>
+
+                    {% if data.photo != "null" and data.photo != null %}
+                        <td class="text-center"><img src="{{ asset('uploads/photos/' ~ data.photo) }}" alt="" style="width: 100px; height: 100px;"></td>
+                    {% else %}
+                        <td class="text-danger text-center">Aucune photo téléchargée</td>
+                    {% endif %} 
+
+                    {% if data.photo2 != "null" and data.photo2 != null %}
+                        <td class="text-center"><img src="{{ asset('uploads/photos/' ~ data.photo2) }}" alt="" style="width: 100px; height: 100px;"></td>
+                    {% else %}
+                        <td class="text-danger text-center">Aucune photo téléchargée</td>
+                    {% endif %} 
+
+                    {% if data.photo3 != "null" and data.photo3 != null %}
+                        <td class="text-center"><img src="{{ asset('uploads/photos/' ~ data.photo3) }}" alt="" style="width: 100px; height: 100px;"></td>
+                    {% else %}
+                        <td class="text-danger text-center">Aucune photo téléchargée</td>
+                    {% endif %} 
+
+                    {% if data.photo4 != "null" and data.photo4 != null %}
+                        <td class="text-center"><img src="{{ asset('uploads/photos/' ~ data.photo4) }}" alt="" style="width: 100px; height: 100px;"></td>
+                    {% else %}
+                        <td class="text-danger text-center">Aucune photo téléchargée</td>
+                    {% endif %} 
+
+                    {% if data.photo5 != "null" and data.photo5 != null%}
+                        <td class="text-center"><img src="{{ asset('uploads/photos/' ~ data.photo5) }}" alt="" style="width: 100px; height: 100px;"></td>
+                    {% else %}
+                        <td class="text-danger text-center">Aucune photo téléchargée</td>
+                    {% endif %} 
+
+                    {% if data.photo6 != "null" and data.photo6 != null %}
+                        <td class="text-center"><img src="{{ asset('uploads/photos/' ~ data.photo6) }}" alt="" style="width: 100px; height: 100px;"></td>
+                    {% else %}
+                        <td class="text-danger text-center">Aucune photo téléchargée</td>
+                    {% endif %} 
                     
                     <td>
                     
@@ -66,7 +111,7 @@
                             <a href="{{ path('app_admin_taille', {'id': data.id}) }}" class="btn bg-warning text-white"><i class="bi bi-plus-slash-minus"></i></a>
                     </td>
                 </tr>          
-                {% endif %}  
+                {# {% endif %}   #}
             {% endfor %}
         </tbody>
     </table>
