--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,42 @@
     </head>
     <body>
         <header class="">
-            <nav class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-1 navbar navbar-dark bg-dark fixed-top">
+       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+                <a  class="nav-link text-white" href="#"><img src="{{ asset('uploads/photos/logo_white_large.png') }}" alt="logo" style="height: 30px;"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-link nav-link-ltr"><a href="{{ path('home') }}" class="nav-link text-white">Home</a></li>
+                    <li class="nav-link nav-link-ltr"><a href="{{ path('shop') }}" class="nav-link text-white">Shop</a></li>
+                    
+                    <li class="nav-link nav-link-ltr"><a href="{{ path('contact') }}" class="nav-link text-white">Contact</a></li>
+                    <li class="nav-link nav-link-ltr"><a href="{{ path('panier') }}" class="nav-link text-white">Panier <i class="bi bi-cart4"></i></a></li>
+            
+                    <li class="nav-link nav-link-ltr dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Compte
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        {% if app.user %}
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <li><a type="button" href="{{ path('app_admin') }}" class="dropdown-item">BackOffice</a></li>
+                            {% endif %} 
+                            <li><a type="button" href="{{ path('app_profil') }}" class="dropdown-item">Profil</a></li>
+                            <li><a type="button" href="{{ path('app_logout') }}" class="dropdown-item">Déconnexion</a></li>
+                        {% else %}
+                            <li><a type="button" href="{{ path('app_login') }}" class="dropdown-item">Connexion</a></li>
+                            <li><a type="button" href="{{ path('app_register') }}" class="dropdown-item">Inscription</a></li>
+                        {% endif %}
+                        </ul>
+                    </li>
+                </ul>
+                </div>
+            </div>
+        </nav>
+            {# <nav class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-1 navbar navbar-dark bg-dark fixed-top">
                 <a href="{{ path('home') }}" class="nav-link px-2 me-2 text-white"><img src="{{ asset('uploads/photos/logo_white_large.png') }}" alt="logo" style="height: 30px;"></a>
                 {% if app.user %}                    
                     <a class="nav-link text-light ms-1" href="{{ path('app_profil') }}" title="Acces a votre compte">Bonjour <strong class="coul">{{ app.user.prenom }} {{ app.user.nom}}</strong></a>
@@ -42,10 +77,10 @@
                         <a type="button" href="{{ path('app_register') }}" class="btn btn-sm hovab border-dark">Inscription</a>
                     {% endif %}
                 </div>
-            </nav>
+            </nav> #}
         </header>
-        <main style="min-height : 740px;">
-        <br><br><br>
+        <main style="min-height : 540px;">
+        <br><br>
             {% block body %}
                 
             {% endblock %}   
@@ -65,8 +100,10 @@
         </footer>
         
         {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
         {% endblock %}
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="../../assets/js/vendor/popper.min.js"></script>
+        <script src="../../dist/js/bootstrap.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
     </body>
