--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,7 +10,7 @@
             <div class="alert alert-danger col-5 mx-auto">Email ou Mot de Passe invalide.</div>
         {% endif %}
 
-        <div class="col-5 mx-auto mb-5">
+        <div class="col-10 col-md-8 mx-auto mb-5">
 
             <label for="inputEmail">Email</label>
             <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
@@ -19,7 +19,7 @@
 
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
             <div class="text-center mt-4">
-                <button class="btn hova col-3" type="submit" href="{{ path('app_profil') }}">Se connecter</button>
+                <button class="btn hova col-md-3 col-5" type="submit" href="{{ path('app_profil') }}">Se connecter</button>
             </div>
             <p class="text-center my-5">Vous n'avez pas encore de compte ? <a href="{{ path('app_register') }}">Créer votre compte</a> .</p>
         </div>
