--- a/templates/shop/contact.html.twig
+++ b/templates/shop/contact.html.twig
@@ -5,8 +5,8 @@
     ARYHA paris | Contact
 {% endblock %}
 {% block body %}
-<div class="container d-flex justify-content-between">
-    <div class="w-75 p-3">
+<div class="row row-cols-lg-2 my-5 mx-auto">
+    <div class="col-lg-8 p-3 mx-auto">
         <h1 class="text-center my-3">Contact</h1>
         {% for message in app.flashes('success') %}
             <div class="col-6 mx-auto text-center alert alert-success">
@@ -48,7 +48,7 @@
                 </div>
             </form>
     </div>
-    <div class="w-25 text-center mt-3">
+    <div class="text-center mt-3 mx-auto col-lg-4">
         <h3 class="mt-3 mb-5">Autres moyens de nous contacter</h3>
         <h5 class="my-3">Par mail :<br>(Une réponse sous 48h)</h5>
         <p class="my-1">lepdgaryha@gmail.com</p>
