--- a/templates/shop/shop.html.twig
+++ b/templates/shop/shop.html.twig
@@ -26,12 +26,40 @@
 
     </div>
 
-    <div class="w-50 h-100 container" id="top">
-        <div class="row row-cols-1 row-cols-md-2 g-4 my-3">
+    <div class="w-50 h-100 container">
+        <div class="row row-cols-1 row-cols-lg-2 g-4 my-3">
             {% set i = 0 %}
             {% for data in articles %}
                 {% set i = i + 1 %}
-                {% if i in 0..10 %} 
+                {% if i in 0..20 and app.request.query.get('op') == ''%} 
+                    <div class="col">
+                        <div class="card h-100">
+                        <a href="{{ path('shop_show', {'id': data.id}) }}"><img src="{{ asset('uploads/photos/' ~ data.photo) }}" class="card-img-top img-fluid" alt="..."></a>
+                        
+                        <div class="card-body">
+                            <h5 class="card-title">{{data.titre}}</h5>
+                            <div class="d-flex justify-content-between">
+                            <p class="card-text">{{ data.description|slice(0,50)|striptags }}[...]</p>
+                            <p class="text-muted">{{data.prix}}&nbsp;€</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                {% elseif app.request.query.get('op') == 'more' and i in 21..40  %}
+                    <div class="col">
+                        <div class="card h-100">
+                        <a href="{{ path('shop_show', {'id': data.id}) }}"><img src="{{ asset('uploads/photos/' ~ data.photo) }}" class="card-img-top img-fluid" alt="..."></a>
+                        
+                        <div class="card-body">
+                            <h5 class="card-title">{{data.titre}}</h5>
+                            <div class="d-flex justify-content-between">
+                            <p class="card-text">{{ data.description|slice(0,50)|striptags }}[...]</p>
+                            <p class="text-muted">{{data.prix}}&nbsp;€</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                {% elseif app.request.query.get('op') == 'more2' and i in 41..60  %}
                     <div class="col">
                         <div class="card h-100">
                         <a href="{{ path('shop_show', {'id': data.id}) }}"><img src="{{ asset('uploads/photos/' ~ data.photo) }}" class="card-img-top img-fluid" alt="..."></a>
@@ -57,9 +85,15 @@
                         </div>
                     </div>
                 </div>
-            
             {% endfor %}
-
+            {% if app.request.query.get('op') == 'more2' %} 
+                <a href="{{ path('shop') }}" class="btn btn-outline-secondary mx-auto text-center my-3">Retour au début</a>
+            {% elseif app.request.query.get('op') == 'more' %}              
+                <a href="?op=more2" class="btn btn-outline-secondary mx-auto text-center my-3">Toujours plus</a>
+            {% else %} 
+                <a href="?op=more" class="btn btn-outline-secondary mx-auto text-center my-3">Encore plus</a>
+            {% endif %}
+            
 
         </div>        
     </div>
@@ -71,10 +105,11 @@
         <div class="col-10 mx-auto order-md-last mt-5">
             
             {% if app.user %}
-            <h4 class="d-flex justify-content-between align-items-center mb-3">
-            <span class="text-primary">Votre Panier</span>
-            <span class="badge bg-primary">{{ nbPanier }}</span>
-            </h4>
+                <h4 class="d-flex justify-content-between align-items-center mb-3">
+                <span class="text-primary">Votre Panier</span>
+                <span class="badge bg-primary">{{ nbPanier }}</span>
+                </h4>
+
                 <ul class="list-group mb-3">
                     {% for element in dataPanier  %}
                         <li class="list-group-item d-flex justify-content-between lh-sm">
@@ -105,7 +140,9 @@
                         <span>Total (euros €)</span>
                         <strong>{{total}}€</strong>
                     </li>
-                    </ul>
+                </ul>
+
+                   
                     <form method="post" class="card p-2">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Code Promo" name="codePromo">
@@ -119,17 +156,21 @@
                         </div>        
                     {% endfor %}
 
-            {% else %}
-            <h4 class="align-items-center mb-3">
-                <span class="text-primary">Connectez vous ou Inscrivez-vous</span> <br>
-            </h4>
-            <span class="text-muted">Pour pouvoir remplir votre panier</span>
-            
-            <div class="d-flex justify-content-around">
+                     <div class="text-center">                    
+                        <a href="{{ path('panier') }}" class="btn hova my-2">Passez la commande</a>
+                    </div>
 
-            </div>
+            {% else %}
+                <h4 class="align-items-center mb-3">
+                    <span class="text-primary">Connectez vous ou Inscrivez-vous</span> <br>
+                </h4>
+                <span class="text-muted">Pour pouvoir remplir votre panier</span>
+                
+                <div class="d-flex justify-content-around">
+
+                </div>
             {% endif %}
-            
+        
         </div>
     </div>
 
