--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
         <header class="">
        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
-                <a  class="nav-link text-white" href="#"><img src="{{ asset('uploads/photos/logo_white_large.png') }}" alt="logo" style="height: 30px;"></a>
+                <a  class="nav-link text-white" href="{{ path('home') }}"><img src="{{ asset('uploads/photos/logo_white_large.png') }}" alt="logo" style="height: 30px;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
