--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 <br><br><br>
-    <h1 class="text-center hov">Bienvenue dans le panier</h1>
+    <h1 class="text-center hov">Votre panier</h1>
     {% for message in app.flashes('danger') %}
         <div class="col-6 mx-auto text-center alert alert-danger">
             {{ message }}
