Commande BDD et petite modif

--- a/templates/back_office/admin_commande.html.twig
+++ b/templates/back_office/admin_commande.html.twig
@@ -22,6 +22,7 @@
                         <th class="text-center"> {{data|capitalize}} </th>
                 {% endfor %}
                 <th class="text-center">Utilisateur :</th>
+                <th class="text-center">Detail</th>
                 <th class="text-center">Action</th>
             </tr> 
         </thead>
