--- a/templates/back_office/admin_user.html.twig
+++ b/templates/back_office/admin_user.html.twig
@@ -59,7 +59,7 @@
                                 <td class="text-primary"> {{ data.nom }}</td>
                                 <td class="text-primary"> {{ data.prenom }}</td>
                                 <td class="text-primary"> {{ data.sexe }}</td>
-                                <td class="text-primary"> {{ data.telephone|abs }}</td>
+                                <td class="text-primary"> 0{{ data.telephone|abs }}</td>
                                 <td class="text-primary"> {{ data.adresse }}</td>
                                 <td class="text-primary"> {{ data.ville }}</td>
                                 <td class="text-primary"> {{ data.codePostal }}</td>                        
