--- a/templates/back_office/admin_user.html.twig
+++ b/templates/back_office/admin_user.html.twig
@@ -31,7 +31,7 @@
                         {% if data != 'password'  %}
                             {% if data != 'roles'  %}
                                 {% if data == 'codePostal'  %}
-                                    <th class="text-center">Code&nbsp;Postale</th>
+                                    <th class="text-center">Code&nbsp;Postal</th>
                                 {% else %}
                                     <th class="text-center"> {{data|capitalize}} </th>
                                 {% endif %}
