--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,8 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connexion{% endblock %}
+{% block title %}ARYHA paris | Connexion{% endblock %}
 
 {% block body %}
+<br><br><br>
     <form method="post" style="vertical-align:middle;">
         <h1 class="mb-3 text-center my-5 hov">Connectez-vous</h1>
         
