--- a/templates/back_office/admin_codePromo_form.html.twig
+++ b/templates/back_office/admin_codePromo_form.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 {% block body %}
 
-<div class="rounded my-5">
+<div class="rounded my-5 align-self-center">
     <div class="col-7 mx-auto my-5">
         {{ form_start(formCode) }}
         <div class="card text-center border-dark">
