--- a/templates/back_office/admin_user_form.html.twig
+++ b/templates/back_office/admin_user_form.html.twig
@@ -43,7 +43,7 @@
                 <p class="card-text">{{ user.ville }}</p>
             </div>
             <div class="d-flex justify-content-between">
-                <p class="card-text">Code Postale :</p>
+                <p class="card-text">Code Postal :</p>
                 <p class="card-text">{{ user.codepostal }}</p>
             </div>
         </div>
