--- a/templates/shop/contact.html.twig
+++ b/templates/shop/contact.html.twig
@@ -5,7 +5,7 @@
     ARYHA paris | Contact
 {% endblock %}
 {% block body %}
-<div class="row row-cols-lg-2 my-5 mx-auto">
+<div class=" container row row-cols-lg-2 my-5 mx-auto">
     <div class="col-lg-8 p-3 mx-auto">
         <h1 class="text-center my-3">Contact</h1>
         {% for message in app.flashes('success') %}
